fix-修复Jar包问题&编写Readme